--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@irony0901/toolbox",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "basic utility functions",
   "author": {
     "name": "irony19",
@@ -40,7 +40,8 @@
   "license": "MIT",
   "dependencies": {
     "dayjs": "^1.11.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
@@ -59,7 +60,6 @@
     "rollup-plugin-typescript2": "^0.32.1",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-node": "^10.8.1",
-    "tslib": "^2.4.0",
     "typescript": "^4.7.3"
   }
 }
