--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@irony0901/toolbox",
-  "version": "0.7.5",
+  "version": "0.7.5-a",
   "description": "basic utility functions",
   "author": {
     "name": "irony19",
