--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@irony0901/toolbox",
-  "version": "0.7.5-a",
+  "version": "0.8.0",
   "description": "basic utility functions",
   "author": {
     "name": "irony19",
@@ -39,8 +39,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "dayjs": "^1.11.3",
-    "uuid": "^8.3.2",
+    "@irony0901/format": "^0.1.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
