--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@irony0901/toolbox",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "basic utility functions",
   "author": {
     "name": "irony19",
@@ -11,6 +11,11 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/src/toolbox.d.ts",
+  "typesVersions": {
+    "*": {
+      "type": [ "dist/src/type/index.type.d.ts" ]
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/irony1090/irony-toolbox"
@@ -39,8 +44,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@irony0901/format": "^0.1.0",
-    "tslib": "^2.4.0"
+    "@irony0901/format": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
