--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@irony0901/toolbox",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "basic utility functions",
   "author": {
     "name": "irony19",
@@ -19,8 +19,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "rollup -c && tsc --emitDeclarationOnly",
-    "build:c": "rollup -c",
+    "build:dec": "rollup -c && tsc --emitDeclarationOnly",
+    "build": "rollup -c",
     "build:test": "rollup -c ./test/main.ts",
     "dev": "rollup -c && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -39,7 +39,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@irony0901/format": "^0.1.2"
+    "@irony0901/format": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
